--- a/mainpage.css
+++ b/mainpage.css
@@ -2,6 +2,9 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    /* background-image: url('library.jpg');
+    background-repeat: no-repeat;
+    background-size: cover; */
 }
 
 /* loading spinner styling */
@@ -38,14 +41,36 @@ body {
     -webkit-animation-duration: 1s;
     animation-name: animatebottom;
     animation-duration: 1s
-  }
+}
   
-  @-webkit-keyframes animatebottom {
+@-webkit-keyframes animatebottom {
     from { bottom:-100px; opacity:0 } 
     to { bottom:0px; opacity:1 }
-  }
+}
   
-  @keyframes animatebottom { 
+@keyframes animatebottom { 
     from{ bottom:-100px; opacity:0 } 
     to{ bottom:0; opacity:1 }
-  }
+}
+
+/* firstpage styling */
+.firstpage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: auto;
+    height: auto;
+    justify-content:center;
+    margin: 10%;
+    border: 1px solid black;
+    padding: 1.5rem;
+    text-align: center;
+}
+
+.firstpagebutton {
+    width: 80%;
+    min-height: 80px;
+    font-size: 2.5rem;
+    border-radius: 20px;
+    margin-top: 1%;
+}
