--- a/mainpage.css
+++ b/mainpage.css
@@ -2,9 +2,9 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-    /* background-image: url('library.jpg');
+    background-image: url('bluebackground.jpg');
     background-repeat: no-repeat;
-    background-size: cover; */
+    background-size: cover;
 }
 
 /* loading spinner styling */
@@ -73,4 +73,9 @@ body {
     font-size: 2.5rem;
     border-radius: 20px;
     margin-top: 1%;
+}
+
+.firstpagebutton:hover {
+    box-shadow: -0.6rem 0.5rem 0.5rem black;
+    transform: translate(1rem, -0.5rem);
 }
