--- a/mainpage.css
+++ b/mainpage.css
@@ -62,6 +62,8 @@ body {
     height: auto;
     justify-content:center;
     margin: 10%;
+    margin-top: 5%;
+    margin-bottom: 5%;
     border: 1px solid black;
     padding: 1.5rem;
     text-align: center;
