--- a/mainpage.css
+++ b/mainpage.css
@@ -69,6 +69,7 @@ body {
     text-align: center;
 }
 
+/* styling for buttons on firstpage */
 .firstpagebutton {
     width: 80%;
     min-height: 80px;
@@ -78,6 +79,71 @@ body {
 }
 
 .firstpagebutton:hover {
-    box-shadow: -0.6rem 0.5rem 0.5rem black;
+    box-shadow: -0.3rem 0.3rem 0.3rem black;
     transform: translate(1rem, -0.5rem);
+    background-color: blue;
+    border-color: white;
+    color: white;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+    width: 100%;
+    height: auto;
+}
+
+/* styling for modal */
+[id^=modal] {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+[id^=modal]:target {
+    display: block;
+}
+
+input[type=checkbox] {
+    position: absolute;
+    clip: rect(0 0 0 0);
+}
+
+/* styling for the overlay and popup */
+.popup {
+    width: 100%;
+    height: 100%;
+    z-index: 99999;
+}
+
+.popup_overlay {
+    position: fixed;
+    z-index: 1;
+    display: block;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: #000000b3;
+}
+
+.popup_content {
+    position: fixed;
+    z-index: 9;
+    width: 80%;
+    max-width: 1200px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 8px;
+    padding: 58px 32px 32px 32px;
+    background: #fff;
+}
+
+/* The Close Button */
+.popup_close {
+    position: absolute;
+    top: 16px;
+    right: 26px;
 }
